prevent cutoff of stars in labels

--- a/remedy/static/css/review.less
+++ b/remedy/static/css/review.less
@@ -22,7 +22,7 @@
 
 .rating:not(:checked) > label {
   float: right;
-  width: 1em;
+  width: 1.1em;
   padding: 0 .1em;
   overflow-y: hidden;
   overflow-x: visible;
